--- a/src/main/resources/templates/flightSearch.html
+++ b/src/main/resources/templates/flightSearch.html
@@ -5,6 +5,28 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p th:text = "'Welcome to TWAirline'"/>
+<p th:text = "${flight.getFrom()}"/>
+
+<!--<form action="#" th:action="@{/search}" method="post">-->
+    <!--<p>From:-->
+        <!--<select>-->
+            <!--<option value="pune">Pune</option>-->
+            <!--<option value="chennai">Chennai</option>-->
+            <!--<option value="hyderabad">Hyderabad</option>-->
+            <!--<option value="bangalore">Bangalore</option>-->
+        <!--</select>-->
+    <!--</p>-->
+    <!--<p>To:-->
+        <!--<select>-->
+            <!--<option value="pune">Pune</option>-->
+            <!--<option value="chennai">Chennai</option>-->
+            <!--<option value="hyderabad">Hyderabad</option>-->
+            <!--<option value="bangalore">Bangalore</option>-->
+        <!--</select>-->
+    <!--</p>-->
+
+    <!--<p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>-->
+<!--</form>-->
+
 </body>
 </html>
