--- a/src/main/resources/templates/flightSearch.html
+++ b/src/main/resources/templates/flightSearch.html
@@ -2,31 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<p th:text = "${flight.getFrom()}"/>
-
-<!--<form action="#" th:action="@{/search}" method="post">-->
-    <!--<p>From:-->
-        <!--<select>-->
-            <!--<option value="pune">Pune</option>-->
-            <!--<option value="chennai">Chennai</option>-->
-            <!--<option value="hyderabad">Hyderabad</option>-->
-            <!--<option value="bangalore">Bangalore</option>-->
-        <!--</select>-->
-    <!--</p>-->
-    <!--<p>To:-->
-        <!--<select>-->
-            <!--<option value="pune">Pune</option>-->
-            <!--<option value="chennai">Chennai</option>-->
-            <!--<option value="hyderabad">Hyderabad</option>-->
-            <!--<option value="bangalore">Bangalore</option>-->
-        <!--</select>-->
-    <!--</p>-->
-
-    <!--<p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>-->
-<!--</form>-->
-
+<p th:text="'Welcome to TWAirline'"/>
+<form method="post" action="#" th:action="@{/search}" th:object="${searchCriteria}">
+    <p th:text="'Source: '"/>
+    <select title="Source" class="form-control" id="source" name="source" th:field="*{source}">
+        <option value="">Select Source</option>
+        <option th:each="city : ${cities}"
+                th:value="${city.id}"
+                th:text="${city.name}">
+        </option>
+    </select>
+    <p th:text="'Destination: '"/>
+    <select class="form-control" id="destination" name="destination" th:field="*{destination}">
+        <option value="">Select Destination</option>
+        <option th:each="city : ${cities}"
+                th:value="${city.id}"
+                th:text="${city.name}"
+        >
+        </option>
+    </select>
+    <input type="submit" value="Submit"/>
+</form>
 </body>
 </html>
