--- a/src/main/resources/templates/flightsView.html
+++ b/src/main/resources/templates/flightsView.html
@@ -3,25 +3,30 @@
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
 </head>
 <body>
-    <p th:text="'Flight Search Results'"/>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Flight Id</th>
-                <th>Source</th>
-                <th>Destination</th>
-            </tr>
-        </thead>
+        <div class="col-md-8">
+            <p th:text="'Flight Search Results'"/>
 
-        <tbody>
-            <tr th:each="flight : ${searchResults}">
-                <td th:text="${flight.flightNumber}"/>
-                <td th:text="${flight.source}"/>
-                <td th:text="${flight.destination}"/>
-            </tr>
-        </tbody>
-    </table>
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>Flight Id</th>
+                    <th>Source</th>
+                    <th>Destination</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                <tr th:each="flight : ${searchResults}">
+                    <td th:text="${flight.flightNumber}"/>
+                    <td th:text="${flight.source}"/>
+                    <td th:text="${flight.destination}"/>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 </body>
 </html>
