Story2: Used LocalDate for flight departure date attribute

--- a/src/main/resources/templates/flightSearch.html
+++ b/src/main/resources/templates/flightSearch.html
@@ -35,7 +35,7 @@
         <input type="number" name="numberOfPassengers" min="1" th:field="*{numberOfPassengers}"/><br/><br/>
 
         <p th:text="'Departure Date: '"/>
-        <input type="date" name="departureDate" th:field="*{departureDate}"/><br/><br/>
+        <input type="date" name="departureDate" th:field="*{departureDateString}"/><br/><br/>
 
         <input type="submit" value="Submit"/>
     </form>
