--- a/src/main/resources/templates/flightsView.html
+++ b/src/main/resources/templates/flightsView.html
@@ -14,6 +14,7 @@
                 <thead>
                 <tr>
                     <th>Flight Id</th>
+                    <th>Carrier Type</th>
                     <th>Source</th>
                     <th>Destination</th>
                 </tr>
@@ -22,6 +23,7 @@
                 <tbody>
                 <tr th:each="flight : ${searchResults}">
                     <td th:text="${flight.flightNumber}"/>
+                    <td th:text="${flight.carrier.carrierType}"/>
                     <td th:text="${flight.source}"/>
                     <td th:text="${flight.destination}"/>
                 </tr>
