[Swetha, Kiran]Story 6 and 7. Strategic pattern applied to calculate fare for each travel class

--- a/src/main/resources/templates/flightSearch.html
+++ b/src/main/resources/templates/flightSearch.html
@@ -60,10 +60,7 @@
 
                 <td>
                     <p th:text="'Departure Date: '"/>
-                    <input type="date" name="departureDateString" th:field="*{departureDateString}"/>
-                </td>
-                <td>
-
+                    <input type="date" name="departureDateString" th:attr="min=${today}" th:field="*{departureDateString}"/>
                 </td>
             </tr>
         </table>
